# Eureka-AI-Scientist

./: .gitignore  BUILD_STATUS.md  Makefile  PROJECT_RULES.md  README.md  pyproject.toml
analysis/: __init__.py  registry.py
apps/: __init__.py
apps/api/: main.py
apps/api/routers/: system.py
apps/web/: index.html  package.json
apps/web/src/: App.tsx  styles.css
apps/worker/: main.py
data/: __init__.py  examples.py  models.py  profiling.py
data/adapters/: __init__.py  base.py  common.py  edgar.py  fred.py  registry.py  yahoo.py
domain/: canonical_domain_model.md  enums.py  ids.py  models.py
infra/: artifact_store.py  settings.py
infra/db/: session.py
llm/: __init__.py  canonical_dataset_builder.py  client.py  contracts.py  evidence_retrieval.py  evidence_retrieval_strategy.md  hypothesis_engine.py  hypothesis_engine_examples.md  merge_planner.py  research_planner.py  research_planner_examples.md
llm/prompts/: canonical_dataset_builder.md  evidence_retrieval.md  hypothesis_engine.md  merge_planner.md  registry.py  research_planner.md
notebook/: __init__.py  service.py
orchestration/: __init__.py  contracts.py  engine.py  fingerprints.py  model_adapter.py  models.py  state_machine.py  store.py  workflow_design.md
tests/integration/: test_system_router.py
tests/unit/: test_data_adapters.py  test_dataset_profiling.py  test_domain_models.py  test_evidence_retrieval.py  test_hypothesis_engine.py  test_merge_planner.py  test_prompt_registry.py  test_research_planner.py  test_state_machine.py  test_workflow_engine.py
(+592 files in other folders)
