[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eureka-research-engine"
version = "0.1.0"
description = "Workflow-first quant research engine with notebook provenance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "sqlmodel>=0.0.16",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "openai>=1.0.0",
  "httpx>=0.27.0",
  "tenacity>=8.2.0",
  "duckdb>=0.10.0",
  "pyarrow>=15.0.0",
  "pandas>=2.2.0",
  "scipy>=1.12.0",
  "statsmodels>=0.14.0",
  "yfinance>=0.2.0",
  "fredapi>=0.5.0",
  "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*", "apps*", "data*", "domain*", "infra*", "llm*", "notebook*", "orchestration*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
